# WeatherAlphaBitNet

./: .gitignore  LICENSE  README.md  pyproject.toml
autoresearch/: benchmark.sh  program.md
configs/: arch_config.json  stations.json  train_config.json
scripts/: eval.sh  export_mlx.sh  train.sh
weatheralpha/: __init__.py  attention.py  bitnet.py  era5.py  eval.py  export_mlx.py  model.py  rollout.py  routing.py  station_embed.py  train.py
