[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weatheralpha-bitnet"
version = "0.1.0"
description = "Station-level weather forecasting with BitNet b1.58 MoE for CPU/MLX inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "xarray>=2024.1",
    "stationbench>=0.1",
    "scipy>=1.12",
    "einops>=0.8",
    "zarr>=2.18",
]

[project.optional-dependencies]
mlx = ["mlx>=0.15"]
train = ["wandb>=0.17", "optuna>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
weatheralpha-train = "weatheralpha.train:main"
weatheralpha-eval = "weatheralpha.eval:main"
weatheralpha-export-mlx = "weatheralpha.export_mlx:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["weatheralpha*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
